@@ -46,7 +46,34 @@ typedef enum {
     ACTION_MAXIMIZE_WINDOW,
     ACTION_CLICK,
     ACTION_RIGHT_CLICK,
-    ACTION_MAIN_MENU
+    ACTION_MAIN_MENU,
+    /* FIXME: the rest is not implemented */
+    ACTION_UP,
+    ACTION_DOWN,
+    ACTION_LEFT,
+    ACTION_RIGHT,
+    ACTION_ESCAPE,
+    ACTION_BACKSPACE,
+    ACTION_DELETE,
+    ACTION_INSERT,
+    ACTION_HOME,
+    ACTION_END,
+    ACTION_PAGE_DOWN,
+    ACTION_PAGE_UP,
+    ACTION_ENTER,
+    ACTION_SWITCH_LAYOUT,
+    ACTION_MOUSE_LEFT,
+    ACTION_MOUSE_RIGHT,
+    ACTION_MOUSE_DOWN,
+    ACTION_MOUSE_UP,
+    ACTION_SHOW_HELP,
+    ACTION_HOME_FOLDER,
+    ACTION_SEARCH,
+    ACTION_SHOW_DESKTOP,
+    ACTION_COPY,
+    ACTION_PASTE,
+    ACTION_CUT,
+    ACTION_LOCK_DESKTOP,
 } VoiceAction;
 
 typedef struct _VoiceActionCommand {
